--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,15 @@
-# Replace with your DB credentials!
-DATABASE_URL="postgres://user:password@host:port/db-name"
+# Database (Neon PostgreSQL)
+DATABASE_URL="postgresql://username:password@ep-xxx.us-east-1.aws.neon.tech/neondb?sslmode=require"
+
+# JWT Authentication
+# Generate a secure random string for production
+JWT_SECRET="your-super-secret-jwt-key-change-in-production"
+
+# Google OAuth
+# Get these from: https://console.cloud.google.com/
+# Create OAuth 2.0 Client ID and add authorized redirect URI:
+# - Development: http://localhost:5173/auth/signin/callback
+# - Production: https://yourdomain.com/auth/signin/callback
+GOOGLE_CLIENT_ID="your-google-client-id.apps.googleusercontent.com"
+GOOGLE_CLIENT_SECRET="your-google-client-secret"
+GOOGLE_REDIRECT_URI="http://localhost:5173/auth/signin/callback"
