--- a/package.json
+++ b/package.json
@@ -68,6 +68,10 @@
 		"@neondatabase/serverless": "^1.0.1",
 		"@node-rs/argon2": "^2.0.2",
 		"@tanstack/svelte-query": "^6.0.0",
+		"@types/jsonwebtoken": "^9.0.10",
+		"arctic": "^3.7.0",
+		"drizzle-zod": "^0.8.3",
+		"jsonwebtoken": "^9.0.2",
 		"zod": "^4.1.12"
 	}
 }
