--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
 		"@eslint/compat": "^1.4.0",
 		"@eslint/js": "^9.36.0",
 		"@internationalized/date": "^3.8.1",
-		"@lucide/svelte": "^0.544.0",
+		"@lucide/svelte": "^0.545.0",
 		"@oslojs/crypto": "^1.0.1",
 		"@oslojs/encoding": "^1.1.0",
 		"@sveltejs/adapter-vercel": "^5.10.2",
@@ -65,13 +65,19 @@
 		"vite-plugin-devtools-json": "^1.0.0"
 	},
 	"dependencies": {
+		"@iconify/svelte": "^5.0.2",
 		"@neondatabase/serverless": "^1.0.1",
 		"@node-rs/argon2": "^2.0.2",
+		"@tabler/icons-svelte": "^3.35.0",
 		"@tanstack/svelte-query": "^6.0.0",
+		"@trpc/client": "^11.6.0",
+		"@trpc/server": "^11.6.0",
 		"@types/jsonwebtoken": "^9.0.10",
 		"arctic": "^3.7.0",
 		"drizzle-zod": "^0.8.3",
 		"jsonwebtoken": "^9.0.2",
+		"superjson": "^2.2.2",
+		"trpc-sveltekit": "^3.6.3",
 		"zod": "^4.1.12"
 	}
 }
