--- a/package.json
+++ b/package.json
@@ -69,14 +69,16 @@
 		"@neondatabase/serverless": "^1.0.1",
 		"@node-rs/argon2": "^2.0.2",
 		"@tabler/icons-svelte": "^3.35.0",
-		"@tanstack/svelte-query": "^6.0.0",
-		"@trpc/client": "^11.6.0",
-		"@trpc/server": "^11.6.0",
+		"@tanstack/svelte-query": "^5",
+		"@trpc/client": "^10",
+		"@trpc/server": "^10",
 		"@types/jsonwebtoken": "^9.0.10",
 		"arctic": "^3.7.0",
 		"drizzle-zod": "^0.8.3",
+		"install": "^0.13.0",
 		"jsonwebtoken": "^9.0.2",
 		"superjson": "^2.2.2",
+		"trpc-svelte-query-adapter": "^2.3.16",
 		"trpc-sveltekit": "^3.6.3",
 		"zod": "^4.1.12"
 	}
