--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
 		"@eslint/compat": "^1.4.0",
 		"@eslint/js": "^9.36.0",
 		"@internationalized/date": "^3.8.1",
-		"@lucide/svelte": "^0.545.0",
+		"@lucide/svelte": "^0.544.0",
 		"@oslojs/crypto": "^1.0.1",
 		"@oslojs/encoding": "^1.1.0",
 		"@sveltejs/adapter-vercel": "^5.10.2",
@@ -78,6 +78,7 @@
 		"drizzle-zod": "^0.8.3",
 		"install": "^0.13.0",
 		"jsonwebtoken": "^9.0.2",
+		"mathjs": "^15.0.0",
 		"superjson": "^2.2.2",
 		"trpc-svelte-query-adapter": "^2.3.16",
 		"trpc-sveltekit": "^3.6.3",
