--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
 		"@tailwindcss/typography": "^0.5.18",
 		"@tailwindcss/vite": "^4.1.13",
 		"@types/node": "^20",
+		"@types/prismjs": "^1.26.5",
 		"bits-ui": "^2.11.0",
 		"clsx": "^2.1.1",
 		"drizzle-kit": "^0.31.4",
@@ -71,14 +72,24 @@
 		"@node-rs/argon2": "^2.0.2",
 		"@tabler/icons-svelte": "^3.35.0",
 		"@tanstack/svelte-query": "^5",
+		"@tiptap/core": "^3.7.0",
+		"@tiptap/extension-document": "^3.7.0",
+		"@tiptap/extension-highlight": "^3.7.0",
+		"@tiptap/extension-paragraph": "^3.7.0",
+		"@tiptap/extension-text": "^3.7.0",
+		"@tiptap/pm": "^3.7.0",
 		"@trpc/client": "^10",
 		"@trpc/server": "^10",
 		"@types/jsonwebtoken": "^9.0.10",
+		"@types/mark.js": "^8.11.12",
 		"arctic": "^3.7.0",
+		"chevrotain": "^11.0.3",
 		"drizzle-zod": "^0.8.3",
 		"install": "^0.13.0",
 		"jsonwebtoken": "^9.0.2",
+		"mark.js": "^8.11.1",
 		"mathjs": "^15.0.0",
+		"prismjs": "^1.30.0",
 		"superjson": "^2.2.2",
 		"trpc-svelte-query-adapter": "^2.3.16",
 		"trpc-sveltekit": "^3.6.3",
