--- a/package.json
+++ b/package.json
@@ -84,6 +84,7 @@
 		"arctic": "^3.7.0",
 		"compromise": "^14.14.4",
 		"drizzle-zod": "^0.8.3",
+		"embla-carousel-wheel-gestures": "^8.1.0",
 		"install": "^0.13.0",
 		"jsonwebtoken": "^9.0.2",
 		"mathjs": "^15.0.0",
