--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
 		"@tailwindcss/typography": "^0.5.18",
 		"@tailwindcss/vite": "^4.1.13",
 		"@types/node": "^20",
+		"@vite-pwa/sveltekit": "^1.0.1",
 		"bits-ui": "^2.11.0",
 		"clsx": "^2.1.1",
 		"drizzle-kit": "^0.31.4",
