ai shimmering and all

--- a/.env.example
+++ b/.env.example
@@ -13,3 +13,8 @@ JWT_SECRET="your-super-secret-jwt-key-change-in-production"
 GOOGLE_CLIENT_ID="your-google-client-id.apps.googleusercontent.com"
 GOOGLE_CLIENT_SECRET="your-google-client-secret"
 GOOGLE_REDIRECT_URI="http://localhost:5173/auth/signin/callback"
+GOOGLE_GENERATIVE_AI_API_KEY="your-google-generative-ai-api-key"
+
+# VERCEL BLOB
+VERCEL_OIDC_TOKEN="your-oidc-token"
+
