--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
 		"vite-plugin-devtools-json": "^1.0.0"
 	},
 	"dependencies": {
+		"@ai-sdk/google": "^2.0.23",
 		"@iconify/svelte": "^5.0.2",
 		"@neondatabase/serverless": "^1.0.1",
 		"@node-rs/argon2": "^2.0.2",
@@ -82,6 +83,8 @@
 		"@trpc/client": "^10",
 		"@trpc/server": "^10",
 		"@types/jsonwebtoken": "^9.0.10",
+		"@vercel/blob": "^2.0.0",
+		"ai": "^5.0.78",
 		"arctic": "^3.7.0",
 		"compromise": "^14.14.4",
 		"drizzle-zod": "^0.8.3",
