--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
 	"dependencies": {
 		"@ai-sdk/google": "^2.0.23",
 		"@iconify/svelte": "^5.0.2",
+		"@neodrag/svelte": "^3.0.0-next.8",
 		"@neondatabase/serverless": "^1.0.1",
 		"@node-rs/argon2": "^2.0.2",
 		"@tabler/icons-svelte": "^3.35.0",
@@ -94,6 +95,8 @@
 		"mathjs": "^15.0.0",
 		"superjson": "^2.2.2",
 		"svelte-dnd-action": "^0.9.65",
+		"svelte-gesture": "^0.1.4",
+		"svelte-gestures": "^5.2.2",
 		"trpc-svelte-query-adapter": "^2.3.16",
 		"trpc-sveltekit": "^3.6.3",
 		"zod": "^4.1.12"
